# airun

./: Cargo.toml  DESIGN.md  Makefile  README.md  REQUIREMENTS.md  ROADMAP.md  airun.example.toml
.agents/agents/: admin.md  explore.md  maintain.md  script.md  summarize.md
.agents/skills/: system-maintenance
src/: main.rs
tests/: integration.rs
