[package]
name = "airun"
version = "0.1.2"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
futures-util = "0.3"
serde_yaml = "0.9.34"
rig-core = "0.33.0"
clap = { version = "4.6.0", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
